Fix to horizontal scrollbar "This couldn't possibly be a problem"

--- a/css/main.scss
+++ b/css/main.scss
@@ -110,6 +110,7 @@ body {
   word-wrap: break-word;
   line-height: 1.75;
   width: 100vw;
+  overflow-x: hidden;
 }
 
 hr {
